syntax = "proto3";

package orderpb;

import "google/protobuf/timestamp.proto";

message OrderItem {
  int64 order_id = 1;
  int64 product_id = 2;
  int64 quantity = 3;
}

message Order {
  int64 id = 1;
  string customer_name = 2;
  repeated OrderItem order_items = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  bool is_deleted = 6;
}
